# libmemkit

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindMemoryManager.cmake  LibMemKitConfig.cmake.in  MemoryManagerConfig.cmake.in
source/: handle_memory.c
tests/: example.c  test.c
